DEV-10937: Handle onSignOut

--- a/app/index.html
+++ b/app/index.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <meta charset="UTF-8">
+  <meta name="robots" content="noindex,nofollow,noarchive">
+
+  <!-- Don't change the next 3 lines. They are used by some plugins to detect a "sidebar". -->
+  <meta name="api-version" content="v14">
+  <meta name="sidebar-revision" content="14.2.2">
+  <meta name="sidebar-version" content="14.2.2">
+
   <title>Acrolinx Server Selector</title>
+
   <!-- #cat styles/index.css.js -->
   <link rel="stylesheet" href="styles/style.css">
   <!-- endcat -->
