Fixed css file name

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
 
   <title>Acrolinx Server Selector</title>
 
-  <!-- #cat styles/index.css.js -->
+  <!-- #cat styles/index.css -->
   <link rel="stylesheet" href="styles/style.css">
   <!-- endcat -->
 </head>
