--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
   <title>Acrolinx Server Selector</title>
 
   <!-- #cat styles/index.css -->
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="styles/index.css">
   <!-- endcat -->
 </head>
 <body>
