--- a/app/index-inlined.html
+++ b/app/index-inlined.html
@@ -12,8 +12,8 @@
 
   <title>Acrolinx Server Selector</title>
 
+  §INCLUDE_FONTS
   <!-- #cat styles/index.css -->
-  <link rel="stylesheet" href="styles/fonts.css">
   <link rel="stylesheet" href="styles/index.css">
   <!-- endcat -->
 </head>
