First test which shows server selector form

--- a/test/browser-tests/index.html
+++ b/test/browser-tests/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <title>BrowserTests</title>
   <link rel="stylesheet" href="../../node_modules/mocha/mocha.css">
+  <link rel="stylesheet" href="../../app/styles/fonts.css">
+  <link rel="stylesheet" href="../../app/styles/index.css">
+  <link rel="stylesheet" href="./test-styles.css">
 </head>
 <body>
 
