Prepare first npm release

--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
   <meta name="sidebar-revision" content="14.2.2">
   <meta name="sidebar-version" content="14.2.2">
 
-  <title>Acrolinx Server Selector</title>
+  <title>Acrolinx Sidebar Start Page</title>
 
   <!-- #cat styles/index.css -->
   <link rel="stylesheet" href="styles/fonts.css">
