--- a/app/index-inlined.html
+++ b/app/index-inlined.html
@@ -10,7 +10,7 @@
   <meta name="sidebar-revision" content="14.2.2">
   <meta name="sidebar-version" content="14.2.2">
 
-  <title>Acrolinx Server Selector</title>
+  <title>Acrolinx Sidebar Start Page</title>
 
   §INCLUDE_FONTS
   <!-- #cat styles/index.css -->
