--- a/app/index-inlined.html
+++ b/app/index-inlined.html
@@ -12,6 +12,63 @@
 
   <title>Acrolinx Sidebar Start Page</title>
 
+  <style>
+    .loader,
+    .loader:after {
+      border-radius: 50%;
+      width: 50px;
+      height: 50px;
+    }
+    .loader {
+      box-sizing: content-box;
+      position: absolute;
+      width: 50px;
+      height: 50px;
+      top: 50%;
+      left: 50%;
+      border-top: 10px solid rgba(144,144,144, 0.2);
+      border-right: 10px solid rgba(144,144,144, 0.2);
+      border-bottom: 10px solid rgba(144,144,144, 0.2);
+      border-left: 10px solid #F44336;
+      transition: border-left-color 0.5s;
+      -webkit-transform: translateZ(0) translateX(-50%) translateY(-50%);
+      -ms-transform: translateZ(0) translateX(-50%) translateY(-50%);;
+      transform: translateZ(0) translateX(-50%) translateY(-50%);
+      -webkit-animation: load8 1.1s infinite linear;
+      animation: load8 1.1s infinite linear;
+    }
+
+    .loaderJsLoaded {
+      border-left-color: #2196F3;
+    }
+
+    .loader .fallbackLoadingMessage {
+      display: none;
+    }
+
+    @-webkit-keyframes load8 {
+      0% {
+        -webkit-transform: translateX(-50%) translateY(-50%) rotate(0deg);
+        transform: translateX(-50%) translateY(-50%) rotate(0deg) ;
+      }
+      100% {
+        -webkit-transform: translateX(-50%) translateY(-50%) rotate(360deg);
+        transform: translateX(-50%) translateY(-50%) rotate(360deg);
+      }
+    }
+    @keyframes load8 {
+      0% {
+        -webkit-transform: translateX(-50%) translateY(-50%) rotate(0deg);
+        transform: translateX(-50%) translateY(-50%) rotate(0deg);
+      }
+      100% {
+        -webkit-transform: translateX(-50%) translateY(-50%) rotate(360deg);
+        transform: translateX(-50%) translateY(-50%) rotate(360deg);
+      }
+    }
+
+  </style>
+
   §INCLUDE_FONTS
   <!-- #cat styles/index.css -->
   <link rel="stylesheet" href="styles/index.css">
@@ -20,6 +77,7 @@
 <body>
 
 <div id="app">
+  <div class="loader"><span class="fallbackLoadingMessage">Loading sidebar startpage ...</span></div>
 </div>
 
 <!-- #cat scripts/main.js -->
