--- a/app/index.html
+++ b/app/index.html
@@ -26,10 +26,8 @@
       height: 50px;
       top: 50%;
       left: 50%;
-      border-top: 10px solid rgba(144,144,144, 0.2);
-      border-right: 10px solid rgba(144,144,144, 0.2);
-      border-bottom: 10px solid rgba(144,144,144, 0.2);
-      border-left: 10px solid #F44336;
+      border: 10px solid rgba(144, 144, 144, 0.2);
+      border-left-color: #F44336;
       transition: border-left-color 0.5s;
       -webkit-transform: translateZ(0) translateX(-50%) translateY(-50%);
       -ms-transform: translateZ(0) translateX(-50%) translateY(-50%);;
